# django-girls-workshop-code

./: .gitignore  manage.py  pyproject.toml
blog/: urls.py  views.py
blog/templates/blog/: base.html  post_detail.html  post_edit.html  post_list.html
django_girls_workshop/: settings.py  urls.py  wsgi.py
tests/: test_django_girls_workshop.py
