[tool.poetry]
name = "django-girls-workshop"
version = "0.1.0"
description = ""
authors = ["Eric Lagasca <develagasca@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.2"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
